--- a/oh-package.json5
+++ b/oh-package.json5
@@ -4,7 +4,7 @@
   "devDependencies": {
     "@ohos/hypium": "1.0.15"
   },
-  "author": "yang_kun_long",
+  "author": "ECNU_Harmony",
   "name": "Account",
   "description": "Please describe the basic information.",
   "main": "",
